--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
                             New file name <input type="text" class="form-control" id="new-file"
                                                  style="width: 200%;font-weight: normal;"/>
                         </label>
+
+                        Note that renaming a file actually has no impact on how JetBrains will interpret the
+                        configuration.
+                        JetBrains IDEs parse the XML and look for the name, instead of the name of the file.
                     </div>
                 </div>
                 <div class="modal-footer">
